--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </div>
                         <div class="flex items-center">
                             <i class="fas fa-envelope text-blue-500 mr-2"></i>
-                            <span>kinsley@example.com</span>
+                            <span>nyakundikinsley@gmail.com</span>
                         </div>
                     </div>
                 </div>
@@ -467,7 +467,7 @@
                             <i class="fas fa-envelope text-blue-500 mt-1 mr-3"></i>
                             <div>
                                 <h4 class="font-semibold">Email</h4>
-                                <p class="text-gray-600">kinsley@example.com</p>
+                                <p class="text-gray-600">nyakundikinsley@gmail.com</p>
                             </div>
                         </div>
                     </div>
@@ -532,7 +532,7 @@
                 </div>
             </div>
             <div class="border-t border-blue-400 mt-6 pt-6 text-center text-blue-200">
-                <p>&copy; 2023 Kinsley Nyakundi. All rights reserved.</p>
+                <p>&copy; 2025 Kinsley Nyakundi. All rights reserved.</p>
             </div>
         </div>
     </footer>
